--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - /mnt/shared:/workspace/shared:cached
 
     # ensure entrypoint.sh runs (clones & checks out the right branch)
-    entrypoint: ["/workspace/entrypoint.sh"]
+    entrypoint: ["/usr/local/binentrypoint.sh"]
     command: ["bash"]
 
 
