--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     # ensure entrypoint.sh runs (clones & checks out the right branch)
     entrypoint: ["/usr/local/bin/entrypoint.sh"]
     command: ["bash"]
+    stdin_open: true
+    tty: true
 
 
     # optional: default branch (can be overridden per-run)
